--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,42 +21,56 @@
                     <h3 class="text-center">Contact Groups</h3>
                 <div class="text-right" class="col-sm-12">
                         <mat-form-field>
-                            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+                            <input matInput (keyup)="applyFilterOnContactGroup($event.target.value)" placeholder="Search">
                         </mat-form-field>
                     </div>
                 
-                <table mat-table [dataSource]="dataSource" class="data_tables ">
+                    <mat-table [dataSource]="dataSource" matSort #sort1="matSort">
+
+                            <!-- ID Column -->
+                            <ng-container matColumnDef="groupName">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                                <mat-cell *matCellDef="let element">  
+                                    <a href="#" (click)="groupInfoAdd(element,$event);">{{element.groupName}} </a> 
+                                </mat-cell>
+                            </ng-container>
                         
-                    <!-- Position Column -->
-                    <ng-container matColumnDef="groupName">
-                      <th mat-header-cell *matHeaderCellDef class="text-center"> Name </th>
-                      <td mat-cell *matCellDef="let element" class="text-center"> {{element.groupName}} </td>
-                    </ng-container>
-                
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="groupDescription">
-                      <th mat-header-cell *matHeaderCellDef class="text-center"> Description </th>
-                      <td mat-cell *matCellDef="let element" class="text-center"> {{element.groupDescription}} </td>
-                    </ng-container>
-                
-                    <!-- Weight Column -->
-                    <ng-container matColumnDef="actions">
-                      <th mat-header-cell *matHeaderCellDef class="text-center"> Actions </th>
-                      <td mat-cell *matCellDef="let row" class="text-center"> 
-                                  <a href="#" (click)="editGroup(row,$event)" class="icons_info">
-                                        <mat-icon>edit</mat-icon>
-                                  </a>
-                                  <a href="#" (click)="deleteGroup(row,$event)" class="icons_info">
-                                        <mat-icon>delete</mat-icon>
-                                  </a>
-                        </td>
-                    </ng-container>
-                
-                
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                  </table>
-                  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons  class="alternate-theme"></mat-paginator>
+                            <!-- Progress Column -->
+                            <ng-container matColumnDef="groupDescription">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Description </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.groupDescription}} </mat-cell>
+                            </ng-container>
+                        
+                            <!-- Name Column -->
+                            <ng-container matColumnDef="name">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+                            </ng-container>
+                        
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="status">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                              <mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.status}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="actions">
+                                    <mat-header-cell *matHeaderCellDef mat-sort-header> Actions </mat-header-cell>
+                                    <mat-cell *matCellDef="let row" [style.color]="row.color"> 
+                                            <a href="#" (click)="editGroup(row,$event)" class="icons_info">
+                                                    <mat-icon>edit</mat-icon>
+                                              </a>
+                                              <a href="#" (click)="deleteGroup(row,$event)" class="icons_info">
+                                                    <mat-icon>delete</mat-icon>
+                                              </a>
+                                    </mat-cell>
+                                  </ng-container>
+                        
+                            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: displayedColumns;">
+                            </mat-row>
+                          </mat-table>
+                        
+                          <mat-paginator id="contactGroups" #contactGroups [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
             </div>
         </div>
           <div class="col-lg-12 margin_top_20">
@@ -65,41 +79,49 @@
                     <h3 class="text-center">Contacts</h3>
                 <div class="text-right" class="col-sm-12">
                     <mat-form-field>
-                        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+                        <input matInput (keyup)="applyFilterOnContacts($event.target.value)" placeholder="Search">
                     </mat-form-field>
                 </div>
-                <table mat-table [dataSource]="contactDataSource" class="data_tables ">
+                <mat-table [dataSource]="contactDataSource" #sort2="matSort" matSort>
 
-                    <!-- Position Column -->
-                    <ng-container matColumnDef="name">
-                      <th mat-header-cell *matHeaderCellDef class="text-center"> Name </th>
-                      <td mat-cell *matCellDef="let element" class="text-center"> {{element.name}} </td>
-                    </ng-container>
-                
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="phone">
-                      <th mat-header-cell *matHeaderCellDef class="text-center"> Phone </th>
-                      <td mat-cell *matCellDef="let element" class="text-center"> {{element.phone}} </td>
-                    </ng-container>
-                
-                    <!-- Weight Column -->
-                    <ng-container matColumnDef="actions">
-                      <th mat-header-cell *matHeaderCellDef class="text-center"> Actions </th>
-                      <td mat-cell *matCellDef="let row" class="text-center"> 
-                                  <a href="#" (click)="editContact(row,$event)" class="icons_info">
-                                        <mat-icon>edit</mat-icon>
-                                  </a>
-                                  <a href="#" (click)="deleteContact(row,$event)" class="icons_info">
-                                        <mat-icon>delete</mat-icon>
-                                  </a>
-                        </td>
-                    </ng-container>
-                
-                
-                    <tr mat-header-row *matHeaderRowDef="contactDisplayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: contactDisplayedColumns;"></tr>
-                  </table>
-                  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons  class="alternate-theme"></mat-paginator>
+                        <!-- ID Column -->
+                        <ng-container matColumnDef="name">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                          <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+                        </ng-container>
+                    
+                        <!-- Progress Column -->
+                        <ng-container matColumnDef="phone">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header> Phone </mat-header-cell>
+                          <mat-cell *matCellDef="let row"> {{row.phone}} </mat-cell>
+                        </ng-container>
+                    
+                        <!-- Name Column -->
+                        <ng-container matColumnDef="status">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                          <mat-cell *matCellDef="let row"> {{row.status}} </mat-cell>
+                        </ng-container>
+
+
+                        <ng-container matColumnDef="actions">
+                            <mat-header-cell *matHeaderCellDef mat-sort-header> Actions </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> 
+                                <a href="#" (click)="editContact(row,$event)" class="icons_info">
+                                    <mat-icon>edit</mat-icon>
+                                </a>
+                                <a href="#" (click)="deleteContact(row,$event)" class="icons_info">
+                                    <mat-icon>delete</mat-icon>
+                                </a> 
+                            </mat-cell>
+                        </ng-container>
+                        
+                    
+                        <mat-header-row *matHeaderRowDef="contactDisplayedColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: contactDisplayedColumns;">
+                        </mat-row>
+                      </mat-table>
+                    
+                      <mat-paginator id="contacts" #contacts [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
             </div>
           </div>
       
