--- a/src/app/edit-contact-group/edit-contact-group.component.html
+++ b/src/app/edit-contact-group/edit-contact-group.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   
-    <div class="float-right person_add">
+    <div class="float-right person_add" *ngIf="canAddContacts">
 
         <button mat-button color="primary" class="float-right add_btn" (click)="addGroupContact()">
             <mat-icon>person_add</mat-icon>
@@ -16,41 +16,54 @@
                   <h3 class="text-center margin_top_20">Available Contacts</h3>
                   <div class="text-right" class="col-sm-12">
                       <mat-form-field>
-                          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+                          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
                       </mat-form-field>
                   </div>
-                  <table mat-table [dataSource]="dataSource" class="data_tables mat-elevation-z8">
-  
-                      <!-- Position Column -->
-                      <ng-container matColumnDef="name">
-                        <th mat-header-cell *matHeaderCellDef class="text-center"> Name </th>
-                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.name}} </td>
-                      </ng-container>
+
+
+                  <mat-table [dataSource]="dataSource" #sort2="matSort" matSort>
+
+                    <!-- ID Column -->
+                    <ng-container matColumnDef="name">
+                      <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                      <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+                    </ng-container>
+                
+                    <!-- Progress Column -->
+                    <ng-container matColumnDef="phone">
+                      <mat-header-cell *matHeaderCellDef mat-sort-header> Phone </mat-header-cell>
+                      <mat-cell *matCellDef="let row"> {{row.phone}} </mat-cell>
+                    </ng-container>
+                
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="status">
+                      <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                      <mat-cell *matCellDef="let row"> {{row.status}} </mat-cell>
+                    </ng-container>
+
+
+                    <ng-container matColumnDef="actions">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Actions </mat-header-cell>
+                        <mat-cell *matCellDef="let row"> 
+                            <a href="#" (click)="editContact(row,$event)" class="icons_info">
+                                <mat-icon>edit</mat-icon>
+                          </a>
+                          <a href="#" (click)="deleteContact(row,$event)" class="icons_info">
+                                <mat-icon>delete</mat-icon>
+                          </a>
+                        </mat-cell>
+                    </ng-container>
+                    
+                
+                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: displayedColumns;">
+                    </mat-row>
+                  </mat-table>
+
+
+                  <mat-paginator id="contacts" #contacts [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+
                   
-                      <!-- Name Column -->
-                      <ng-container matColumnDef="phone">
-                        <th mat-header-cell *matHeaderCellDef class="text-center"> Phone </th>
-                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.phone}} </td>
-                      </ng-container>
-                  
-                      <!-- Weight Column -->
-                      <ng-container matColumnDef="actions">
-                        <th mat-header-cell *matHeaderCellDef class="text-center"> Actions </th>
-                        <td mat-cell *matCellDef="let row" class="text-center"> 
-                                    <a href="#" (click)="editContact(row,$event)" class="icons_info">
-                                          <mat-icon>edit</mat-icon>
-                                    </a>
-                                    <a href="#" (click)="deleteContact(row,$event)" class="icons_info">
-                                          <mat-icon>delete</mat-icon>
-                                    </a>
-                          </td>
-                      </ng-container>
-                  
-                  
-                      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    </table>
-                    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons  class="alternate-theme"></mat-paginator>
               </div>
           </div>
             <div class="col-lg-12">
